# Templates

./: .gitattributes  .gitignore  CMakeLists.txt  CPPLINT.cfg  Preferences.sublime-settings  README.md  Wesley++2.0  Wesley++2.0.cpp  assembly.py  avl.cpp  bbst.cpp  bbst2.cpp  bbst3.cpp  bit_bsearch.cpp  bit_range.cpp  bogosort.py  ccw.cpp  centroid.cpp  centroid_decomp.cpp  cht.cpp  classical_dijkstra.cpp  comp.py  competitive.sublime-build  composition_attack.cpp  data.sh  dijkstra.cpp  fast  fast_hash.cpp  fast_io.cpp  fast_walsh_hadamard_transform.cpp  fastaddition.cpp  fft.cpp  fwht.cpp  fwht1.cpp  fwht4.cpp  fwht6.cpp  fwht6_slow.cpp  gen  gen.cpp  gen.py  (+63 more)
.github/workflows/: build.yml
Content/: classical_dijkstra.cpp  dijkstra.cpp  fwht4_slow.cpp  hash_random.cpp  help2.sh  kmp.cpp  segment_tree.cpp  sparse_seg.cpp  z-algorithm.cpp
Content/data_structures/: hash_table.cpp  lazy_seg_arithmetic_progression.cpp  pbds_sample.cpp  sparse_seg_of_bbsts.cpp  splay.cpp
Content/geometry/: basic_geometry.cpp  cht.cpp  slope_trick.cpp
Content/graph/: centroid.cpp  centroid_decomp.cpp  lca.cpp  tarjan.cpp
Content/math/: ccw.cpp  math.cpp
Content/string/: hash.cpp  manacher.cpp  pseg_compare_strings.cpp  trie.cpp
Content/utils/: comp.py  data.sh  gen.cpp  gen.py  optimization_compiler_directives.cpp  weighted_shuffle.cpp
Scripts/: compile.sh
content/data_structures/: UnionFind.cpp  (+10 more)
examples/: segment_tree_example.cpp  segment_tree_simple_example.cpp  suffix_array_example.cpp
scripts/: check_lines.py  compile.sh  run_cpp_tests.sh
tests/: point_tests.cpp
(+23 files in other folders)
